--- a/registrazione/registrazione.html
+++ b/registrazione/registrazione.html
@@ -14,7 +14,7 @@
 		<title>Registration Form</title> 
     
 </head>
-<body background="immagine.png">
+<body>
     <!--
     FORM PER REGISTRARSI ALL'APPLICAZIONE, E' NECESSARIA UNA EMAIL DI UNITN
     -->
