--- a/errore/error.html
+++ b/errore/error.html
@@ -28,7 +28,7 @@ FUNZIONE TRIP PLANNER E MY TRIP PLANNER ABILITATI
   </div>
 </nav>
 
-<h1>Errore</h1>
+<h1>ERRORE HAI SBAGLIATO QUALCOSA, PROVA A SCRIVERE MEGLIO I DATI</h1>
 </body>
 
 </html>
