--- a/errore/error.html
+++ b/errore/error.html
@@ -28,7 +28,7 @@ FUNZIONE TRIP PLANNER E MY TRIP PLANNER ABILITATI
   </div>
 </nav>
 
-<h1>ERRORE HAI SBAGLIATO QUALCOSA, PROVA A SCRIVERE MEGLIO I DATI</h1>
+<h3>ERRORE HAI SBAGLIATO QUALCOSA, PROVA A SCRIVERE MEGLIO I DATI, O CONTROLLA CHE SU MY TRIP_PLANNER SE HAI GIà FATTO LA PRENOTAZIONE IN PRECEDENZA </h3>
 </body>
 
 </html>
