--- a/errore/error.html
+++ b/errore/error.html
@@ -28,7 +28,14 @@ FUNZIONE TRIP PLANNER E MY TRIP PLANNER ABILITATI
   </div>
 </nav>
 
-<h3>ERRORE HAI SBAGLIATO QUALCOSA, PROVA A SCRIVERE MEGLIO I DATI, O CONTROLLA CHE SU MY TRIP_PLANNER SE HAI GIà FATTO LA PRENOTAZIONE IN PRECEDENZA </h3>
+<h3><b>Ops, errore</h3><br><br>
+<div>Prova a controllare se hai fatto uno di questi errori    
+<ul>
+  <li>E' possibile che tu abbia scritto male qualche parola</li>
+  <li>Hai già effettuto questa prenotazione in passato</li>
+  
+</ul>
+</div>
 </body>
 
 </html>
